--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
     "serve": "gatsby serve",
     "clean": "rimraf .cache public",
     "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
+    "babel-jest": "^26.3.0",
+    "babel-preset-gatsby": "^0.5.5",
     "gh-pages": "^2.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.4.1",
     "prettier": "^1.17.0",
+    "react-test-renderer": "^16.13.1",
     "rimraf": "^3.0.2"
   },
   "keywords": [
