--- a/package.json
+++ b/package.json
@@ -16,41 +16,48 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.6.0",
-    "gatsby": "^2.32.12",
-    "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "gatsby-plugin-load-script": "^1.1.0",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby": "^3.3.0",
+    "gatsby-plugin-fontawesome-css": "^1.1.0",
+    "gatsby-plugin-image": "^1.3.0",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-offline": "^4.3.0",
     "gatsby-plugin-purgecss": "^6.0.1",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-react-i18next": "^1.1.1",
+    "gatsby-plugin-sass": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-typescript": "^3.3.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-sharp": "^3.3.0",
+    "i18next": "^20.2.1",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-images": "^1.1.7",
+    "react-i18next": "^11.8.13",
+    "react-images": "^1.2.0-beta.6",
     "react-scrollspy": "^3.4.3",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
-    "start": "yarn develop",
-    "develop": "gatsby develop",
-    "build": "yarn run clean && gatsby build",
-    "deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public",
+    "start": "yarn deploy:build && yarn serve",
+    "dev": "gatsby develop",
+    "build": "tsc --noEmit",
+    "build:ci": "gatsby build --log-pages",
+    "build:deploy": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "rimraf .cache public",
     "format": "prettier --write '**/*.js'",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "prepare": "ts-dev-tools install"
   },
   "devDependencies": {
-    "babel-jest": "^26.6.3",
+    "@ts-dev-tools/react": "^1.5.3",
+    "@types/react-helmet": "^6.1.1",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "babel-preset-gatsby": "^1.3.0",
-    "gh-pages": "^3.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "react-test-renderer": "^16.14.0",
     "rimraf": "^3.0.2"
   },
   "keywords": [
@@ -62,5 +69,94 @@
   "bugs": {
     "url": "https://github.com/escemi-tech/escemi-website/issues"
   },
-  "homepage": "https://github.com/escemi-tech/escemi-website#readme"
+  "homepage": "https://github.com/escemi-tech/escemi-website#readme",
+  "eslintConfig": {
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint",
+      "jest"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:jest/recommended",
+      "plugin:react/recommended",
+      "prettier"
+    ],
+    "env": {
+      "es2021": true,
+      "browser": true
+    },
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 12,
+      "sourceType": "module"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "rules": {
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    }
+  },
+  "prettier": {
+    "semi": true,
+    "printWidth": 100,
+    "trailingComma": "es5"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix"
+    ]
+  },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom",
+    "testMatch": [
+      "**/__tests__/**/*.[jt]s?(x)",
+      "**/?(*.)+(spec|test).+(ts|tsx|js)"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "<rootDir>/jest-preprocess.js"
+    },
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss)$": "identity-obj-proxy",
+      ".+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/file-mock.js"
+    },
+    "testPathIgnorePatterns": [
+      "node_modules",
+      "\\.cache",
+      "<rootDir>.*/public"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(gatsby)/)"
+    ],
+    "globals": {
+      "__PATH_PREFIX__": ""
+    },
+    "testURL": "http://localhost",
+    "setupFiles": [
+      "<rootDir>/loadershim.js"
+    ]
+  },
+  "tsDevTools": {
+    "version": "@ts-dev-tools/react - 20201111162698-init"
+  }
 }
