ci: improve gastby caching

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -26,7 +26,6 @@ jobs:
           path: |
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
             node_modules
-            */*/node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
@@ -41,7 +40,7 @@ jobs:
         with:
           path: |
             .cache
-            public/
+            public
           key: ${{ runner.os }}-cache-gatsby-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-cache-gatsby-
@@ -94,7 +93,6 @@ jobs:
           path: |
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
             node_modules
-            */*/node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
@@ -109,7 +107,7 @@ jobs:
         with:
           path: |
             .cache
-            public/
+            public
           key: ${{ runner.os }}-cache-gatsby-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-cache-gatsby-
