--- a/package.json
+++ b/package.json
@@ -15,32 +15,32 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "bootstrap": "^4.6.0",
-    "gatsby": "^3.3.0",
+    "bootstrap": "^5.0.0",
+    "gatsby": "^3.5.0",
     "gatsby-plugin-fontawesome-css": "^1.1.0",
-    "gatsby-plugin-image": "^1.3.0",
-    "gatsby-plugin-manifest": "^3.3.0",
-    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.0",
     "gatsby-plugin-purgecss": "^6.0.1",
-    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-i18next": "^1.1.1",
-    "gatsby-plugin-sass": "^4.3.0",
-    "gatsby-plugin-sharp": "^3.3.0",
-    "gatsby-plugin-typescript": "^3.3.0",
-    "gatsby-source-filesystem": "^3.3.0",
-    "gatsby-transformer-sharp": "^3.3.0",
+    "gatsby-plugin-sass": "^4.5.0",
+    "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-typescript": "^3.5.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-sharp": "^3.5.0",
     "i18next": "^20.2.1",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.13",
     "react-images": "^1.2.0-beta.6",
     "react-scrollspy": "^3.4.3",
+    "sass": "^1.32.13",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
-    "start": "yarn deploy:build && yarn serve",
+    "start": "yarn build:deploy && yarn serve",
     "dev": "gatsby develop",
     "build": "tsc --noEmit",
     "build:ci": "gatsby build --log-pages",
@@ -56,7 +56,7 @@
     "@ts-dev-tools/react": "^1.5.4",
     "@types/react-helmet": "^6.1.1",
     "@types/smoothscroll-polyfill": "^0.3.1",
-    "babel-preset-gatsby": "^1.3.0",
+    "babel-preset-gatsby": "^1.5.0",
     "identity-obj-proxy": "^3.0.0",
     "rimraf": "^3.0.2"
   },
