--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
     "email": "developer@escemi.com"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^5.0.0",
-    "gatsby": "^3.13.0",
+    "gatsby": "^4.19.2",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
-    "gatsby-plugin-image": "^1.14.2",
-    "gatsby-plugin-manifest": "^3.5.0",
-    "gatsby-plugin-offline": "^4.5.0",
+    "gatsby-plugin-image": "^2.19.0",
+    "gatsby-plugin-manifest": "^4.19.0",
+    "gatsby-plugin-offline": "^5.19.0",
     "gatsby-plugin-purgecss": "^6.0.1",
-    "gatsby-plugin-react-helmet": "^4.5.0",
-    "gatsby-plugin-react-i18next": "^1.1.1",
-    "gatsby-plugin-sass": "^4.5.0",
-    "gatsby-plugin-sharp": "^3.5.0",
-    "gatsby-plugin-typescript": "^3.11.0",
-    "gatsby-source-filesystem": "^3.5.0",
-    "gatsby-transformer-sharp": "^3.5.0",
-    "i18next": "^21.1.0",
+    "gatsby-plugin-react-helmet": "^5.19.0",
+    "gatsby-plugin-react-i18next": "^2.0.1",
+    "gatsby-plugin-sass": "^5.19.0",
+    "gatsby-plugin-sharp": "^4.19.0",
+    "gatsby-plugin-typescript": "^4.19.0",
+    "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-transformer-sharp": "^4.19.0",
+    "i18next": "^21.8.14",
     "lmdb-store": "^1.6.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-i18next": "^11.8.13",
+    "react-i18next": "^11.18.1",
     "react-images": "^1.2.0-beta.6",
     "react-scrollspy": "^3.4.3",
-    "sass": "^1.32.13",
+    "sass": "^1.53.0",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
@@ -48,7 +48,7 @@
     "build:deploy": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "rimraf .cache public",
-    "format": "prettier --write '**/*.js'",
+    "format": "prettier --cache --write '**/*.{ts,tsx}'",
     "jest": "jest --detectOpenHandles --forceExit",
     "test": "yarn jest --maxWorkers=50%",
     "test:watch": "yarn jest --watch --maxWorkers=25%",
@@ -58,10 +58,10 @@
     "prepare": "ts-dev-tools install"
   },
   "devDependencies": {
-    "@ts-dev-tools/react": "^1.5.4",
+    "@ts-dev-tools/react": "^1.5.33",
     "@types/react-helmet": "^6.1.1",
     "@types/smoothscroll-polyfill": "^0.3.1",
-    "babel-preset-gatsby": "^2.0.0",
+    "babel-preset-gatsby": "^2.19.0",
     "gatsby-plugin-eslint": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "rimraf": "^3.0.2"
@@ -104,6 +104,9 @@
     "settings": {
       "react": {
         "version": "detect"
+      },
+      "jest": {
+        "version": "detect"
       }
     },
     "rules": {
@@ -140,7 +143,7 @@
     "testEnvironment": "jsdom",
     "testMatch": [
       "**/__tests__/**/*.[jt]s?(x)",
-      "**/?(*.)+(spec|test).+(ts|tsx|js)"
+      "**/?(*.)+(spec|test)?(.*).+(ts|tsx|js)"
     ],
     "transform": {
       "^.+\\.jsx?$": "<rootDir>/jest-preprocess.js"
@@ -160,12 +163,17 @@
     "globals": {
       "__PATH_PREFIX__": ""
     },
-    "testURL": "http://localhost",
+    "testEnvironmentOptions": {
+      "url": "http://localhost"
+    },
     "setupFiles": [
       "<rootDir>/loadershim.js"
+    ],
+    "collectCoverageFrom": [
+      "**/src/**/*.[jt]s?(x)"
     ]
   },
   "tsDevTools": {
-    "version": "20201111162698-init"
+    "version": "20220617100200-prettier-cache"
   }
 }
