--- a/application/package.json
+++ b/application/package.json
@@ -4,10 +4,16 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "astro check"
+    "lint": "astro check",
+    "lint:fix": "astro check --fix",
+    "lint:ci": "astro check --json",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ci": "vitest run --coverage.enabled true --coverage.report=text --coverage.reporter=lcov"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
@@ -16,6 +22,8 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.5",
-    "typescript": "^5.9.3"
+    "@vitest/coverage-v8": "^4.0.12",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.12"
   }
 }
