--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -21,42 +21,6 @@ jobs:
       pull-requests: write
       security-events: write
 
-  generate-docs:
-    name: Generate Documentation
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
-        with:
-          persist-credentials: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - id: generate-github-actions-docs
-        uses: hoverkraft-tech/ci-dokumentor@c46a1a108957237cf485103a80b060c35c7dba33 # 0.2.2
-        with:
-          source: |
-            .github/actions/**/action.yml
-            .github/workflows/update-branding-assets.yml
-
-      - uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
-        id: generate-token
-        with:
-          app-id: ${{ vars.CI_BOT_APP_ID }}
-          private-key: ${{ secrets.CI_BOT_APP_PRIVATE_KEY }}
-
-      - uses: hoverkraft-tech/ci-github-common/actions/create-and-merge-pull-request@1127e708e4072515056a4b0d26bcb0653646cedc # 0.30.0
-        with:
-          github-token: ${{ steps.generate-token.outputs.token }}
-          branch: docs/action-documentation-update
-          title: "docs: update action documentation"
-          body: Update action documentation
-          commit-message: |
-            docs: update action documentation
-
-            [skip ci]
-
   deploy:
     if: github.ref_name == github.event.repository.default_branch
     name: Deploy website
@@ -73,4 +37,4 @@ jobs:
         uses: hoverkraft-tech/ci-github-publish/actions/deploy/github-pages@0.14.1
         with:
           build-path: application/dist
-          build-artifact-name: build
+          build-artifact-id: ${{ needs.ci.outputs.build-artifact-id }}
