--- a/.github/workflows/__shared-ci.yml
+++ b/.github/workflows/__shared-ci.yml
@@ -2,6 +2,8 @@ name: Common Continuous Integration tasks
 
 on:
   workflow_call:
+    outputs:
+      build-artifact-id: ${{ jobs.continuous-integration.outputs.build-artifact-id }}
 
 permissions: {}
 
