--- a/.github/workflows/sync-resumes.yml
+++ b/.github/workflows/sync-resumes.yml
@@ -93,11 +93,11 @@ jobs:
         id: download-artifact
         uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53 # v6.0.0
         with:
-          repository: ${{ inputs.repository }}
-          run-id: ${{ inputs.run-id }}
-          artifact-ids: ${{ inputs.artifact-id }}
+          repository: ${{ steps.parse-inputs.outputs.repository }}
+          run-id: ${{ steps.parse-inputs.outputs.run-id }}
+          artifact-ids: ${{ steps.parse-inputs.outputs.artifact-id }}
           github-token: ${{ steps.generate-token.outputs.token }}
-          path: ${{ runner.temp }}/resumes-assets-${{ inputs.run-id }}-${{ inputs.artifact-id }}
+          path: ${{ runner.temp }}/resumes-assets-${{ steps.parse-inputs.outputs.run-id }}-${{ steps.parse-inputs.outputs.artifact-id }}
 
       - name: Copy resume files
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
@@ -109,28 +109,36 @@ jobs:
             const path = require('path');
 
             core.debug("Listing downloaded files:");
-            const downloadedFiles = fs.readdirSync(process.env.DOWNLOADED_PATH);
+            const collectFiles = (directory) => {
+              const entries = fs.readdirSync(directory, { withFileTypes: true });
+              return entries.flatMap((entry) => {
+                const entryPath = path.join(directory, entry.name);
+                return entry.isDirectory()
+                  ? collectFiles(entryPath)
+                  : path.relative(process.env.DOWNLOADED_PATH, entryPath);
+              });
+            };
+
+            const downloadedFiles = collectFiles(process.env.DOWNLOADED_PATH);
             for (const file of downloadedFiles) {
                 core.debug(`- ${file}`);
-                // Move json files to application/src/data/resume/
+                let destinationPath;
                 if (file.endsWith('.json')){
-                    const sourcePath = path.join(process.env.DOWNLOADED_PATH, file);
-                    const destPath = path.join(process.cwd(), 'application', 'src', 'data', 'resume', file);
-                    fs.copyFileSync(sourcePath, destPath);
-                    core.info(`Copied JSON resume file to ${destPath}`);
-                    continue;
+                  // Move json files to application/src/data/resumes/
+                  destinationPath = path.join('src', 'data', 'resumes');
+                } else if (file.endsWith('.pdf')){
+                  // Move pdf files to application/public/resumes/
+                  destinationPath = path.join('public', 'resumes');
+                } else {
+                  return core.setFailed(`Unexpected file type for file: ${file}`);
                 }
 
-                // Move pdf files to application/public/resumes/
-                if (file.endsWith('.pdf')){
-                    const sourcePath = path.join(process.env.DOWNLOADED_PATH, file);
-                    const destPath = path.join(process.cwd(), 'application', 'public', 'resumes', file);
-                    fs.copyFileSync(sourcePath, destPath);
-                    core.info(`Copied PDF resume file to ${destPath}`);
-                    continue;
-                }
-
-                return core.setFailed(`Unexpected file type for file: ${file}`);
+                destinationPath = path.join(process.cwd(), 'application', destinationPath, path.basename(file));
+                core.debug(`Destination path for ${file} is ${destinationPath}`);                
+                const sourcePath = path.join(process.env.DOWNLOADED_PATH, file);
+                core.debug(`Source path for ${file} is ${sourcePath}`);
+                fs.copyFileSync(sourcePath, destinationPath);
+                core.info(`Copied JSON resume file ${file} to ${destinationPath}`);
             }
 
       - name: Create pull request with updated assets
