--- a/application/package.json
+++ b/application/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.0",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
